# arciva

./: .eslintrc.cjs  .gitignore  .npmrc  Agents.md  Cargo.toml  Dockerfile  README.md  app_instruction_seed_data.jsonl  dev.sh  package.json  pixi.toml  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  tmp.ts
.agent/rules/: git-workflow.md  permissions.md  project-context.md  testing.md
.agent/workflows/: dev-cycle.md
.dev/: compose.yml  init.json
.github/: README.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  user_story.yml
.github/workflows/: backend-ci.yml  codeql.yml  commit-lint.yml  deploy-prod.yml  deploy-staging.yml  docker-build-publish.yml  docker-check.yml  docker-release.yml  e2e.yml  frontend-ci.yml  quickfix-renderer.yml  release-drafter.yml  release.yml
backend/: .env.example  requirements.txt
backend/app/: constants.py  db.py  deps.py  imaging.py  logging_utils.py  main.py  models.py  (+4 more)
deploy/: .env.arciva.example  docker-compose.arciva.yml
docker/: entrypoint.sh
docs/: Agents.md  README.md  docs_arc_42_and_adrs.md  import_processed_items.feature  pwa-qa-checklist.md  readme_frontend_setup_vite_react_ts_tailwind.md  self-hosting.md  test_actions.md  upload_initialization.feature
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
quickfix-renderer/: Cargo.toml  README.md  package.json  tsconfig.build.json  tsconfig.json  vite.config.ts
quickfix-renderer/src/: lib.rs
quickfix-renderer/ts/: index.ts
src/: index.css
(+223 files in other folders)
