[package]
name = "quickfix-renderer"
edition = "2021"
version = "0.1.0"
authors = ["Arciva Contributors"]
description = "A wasm32 renderer core for Quickfix"
license = "MIT"
repository = "https://github.com/jome92/arciva"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["webgpu"]
webgpu = ["wgpu/webgpu"]
webgl2 = ["wgpu/webgl"]
cpu = ["wgpu/webgl"]

[dependencies]
js-sys = "0.3.72"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = ["Window", "Document", "HtmlCanvasElement", "console"] }
wgpu = { version = "0.20.1", default-features = false, features = ["wgsl"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.45"
